--- a/ESP32_office.yaml
+++ b/ESP32_office.yaml
@@ -57,25 +57,61 @@ logger:
 ota:
   password: !secret ota_psw
 
+ld2410:
+
+button:
+  - platform: ld2410
+    factory_reset:
+      name: "${upper_devicename} factory reset"
+    restart:
+      name: "${upper_devicename} restart"
+    query_params:
+      name: "${upper_devicename} query params"
+
 binary_sensor:
   - <<: !include common/connectStatusSensor.yaml
   - platform: ld2410
     has_target:
-      name: "${upper_devicename} Presence"
+      name: "${upper_devicename} presence"
     has_moving_target:
-      name: "${upper_devicename} Moving Target"
+      name: "${upper_devicename} moving Target"
     has_still_target:
-      name: "${upper_devicename} Still Target"
+      name: "${upper_devicename} still Target"
+    out_pin_presence_status:
+      name: "${upper_devicename} out pin presence status"
+  - platform: gpio
+    pin: GPIO13
+    name: "${upper_devicename} gpio out pin presence"
+    device_class: presence
 
 text_sensor:
   - <<: !include common/versionTextSensor.yaml
   - <<: !include common/wifiInfoTextSensor.yaml
+  - platform: ld2410
+    version:
+      name: "${upper_devicename} firmware version"
+
+select:
+  - platform: ld2410
+    distance_resolution:
+      name: "${upper_devicename} distance resolution"
+    baud_rate:
+      name: "${upper_devicename} baud rate"
+    light_function:
+      name: "${upper_devicename} light function"
+    out_pin_level:
+      name: "${upper_devicename} out pin level"
 
 switch:
-  - <<: !include common/restartSwitch.yaml
-  # - <<: !include common/shutdownSwitch.yaml
+#   - <<: !include common/restartSwitch.yaml
+#   - <<: !include common/shutdownSwitch.yaml
+  - platform: ld2410
+    engineering_mode:
+      name: "${upper_devicename} engineering mode"
+    bluetooth:
+      name: "${upper_devicename} control bluetooth"
 
-# for the AHT10 / BH1750
+# for the AHT10 / BH1750 / BME280
 i2c:
   - id: bus_a
     sda: GPIO21
@@ -106,42 +142,122 @@ sensor:
     address: 0x23
     update_interval: 5s
   - platform: ld2410
+    light:
+      name: "${upper_devicename} light"
     moving_distance:
-      name: "${upper_devicename} Moving Distance"
+      name: "${upper_devicename} moving Distance"
     still_distance:
-      name: "${upper_devicename} Still Distance"
+      name: "${upper_devicename} still Distance"
     moving_energy:
-      name: "${upper_devicename} Move Energy"
+      name: "${upper_devicename} move Energy"
     still_energy:
-      name: "${upper_devicename} Still Energy"
+      name: "${upper_devicename} still Energy"
     detection_distance:
-      name: "${upper_devicename} Detection Distance"
+      name: "${upper_devicename} detection Distance"
+    g0:
+      move_energy:
+        name: "${upper_devicename} g0 move energy"
+      still_energy:
+        name: "${upper_devicename} g0 still energy"
+    g1:
+      move_energy:
+        name: "${upper_devicename} g1 move energy"
+      still_energy:
+        name: "${upper_devicename} g1 still energy"
+    g2:
+      move_energy:
+        name: "${upper_devicename} g2 move energy"
+      still_energy:
+        name: "${upper_devicename} g2 still energy"
+    g3:
+      move_energy:
+        name: "${upper_devicename} g3 move energy"
+      still_energy:
+        name: "${upper_devicename} g3 still energy"
+    g4:
+      move_energy:
+        name: "${upper_devicename} g4 move energy"
+      still_energy:
+        name: "${upper_devicename} g4 still energy"
+    g5:
+      move_energy:
+        name: "${upper_devicename} g5 move energy"
+      still_energy:
+        name: "${upper_devicename} g5 still energy"
+    g6:
+      move_energy:
+        name: "${upper_devicename} g6 move energy"
+      still_energy:
+        name: "${upper_devicename} g6 still energy"
+    g7:
+      move_energy:
+        name: "${upper_devicename} g7 move energy"
+      still_energy:
+        name: "${upper_devicename} g7 still energy"
+    g8:
+      move_energy:
+        name: "${upper_devicename} g8 move energy"
+      still_energy:
+        name: "${upper_devicename} g8 still energy"
 
-esp32_ble_tracker:
+number:
+  - platform: ld2410
+    timeout:
+      name: "${upper_devicename} Timeout"
+    light_threshold:
+      name: "${upper_devicename} Light threshold"
+    max_move_distance_gate:
+      name: "${upper_devicename} Max move distance gate"
+    max_still_distance_gate:
+      name: "${upper_devicename} max still distance gate"
+    g0:
+      move_threshold:
+        name: "${upper_devicename} g0 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g0 still threshold"
+    g1:
+      move_threshold:
+        name: "${upper_devicename} g1 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g1 still threshold"
+    g2:
+      move_threshold:
+        name: "${upper_devicename} g2 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g2 still threshold"
+    g3:
+      move_threshold:
+        name: "${upper_devicename} g3 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g3 still threshold"
+    g4:
+      move_threshold:
+        name: "${upper_devicename} g4 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g4 still threshold"
+    g5:
+      move_threshold:
+        name: "${upper_devicename} g5 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g5 still threshold"
+    g6:
+      move_threshold:
+        name: "${upper_devicename} g6 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g6 still threshold"
+    g7:
+      move_threshold:
+        name: "${upper_devicename} g7 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g7 still threshold"
+    g8:
+      move_threshold:
+        name: "${upper_devicename} g8 move threshold"
+      still_threshold:
+        name: "${upper_devicename} g8 still threshold"
+
+# esp32_ble_tracker:
   
-bluetooth_proxy:
-  active: true
+# bluetooth_proxy:
+#   active: true
 
-ld2410:
-  timeout: 5s
-  max_move_distance : 5.25m
-  max_still_distance: 5.25m
-  g0_move_threshold: 25
-  g1_move_threshold: 25
-  g2_move_threshold: 20
-  g3_move_threshold: 20
-  g4_move_threshold: 20
-  g5_move_threshold: 20
-  g6_move_threshold: 10
-  g7_move_threshold: 10
-  g8_move_threshold: 10
-
-  g0_still_threshold: 0
-  g1_still_threshold: 0
-  g2_still_threshold: 25
-  g3_still_threshold: 25
-  g4_still_threshold: 25
-  g5_still_threshold: 25
-  g6_still_threshold: 15
-  g7_still_threshold: 15
-  g8_still_threshold: 15
