--- a/ESP32_Living.yaml
+++ b/ESP32_Living.yaml
@@ -52,7 +52,8 @@ logger:
   level: $logger_level
 
 ota:
-  password: !secret ota_psw
+  - platform: esphome
+    password: !secret ota_psw
 
 binary_sensor:
   - <<: !include common/connectStatusSensor.yaml
@@ -79,7 +80,7 @@ i2c:
     scan: True
 
 sensor:
-  - platform: bme280
+  - platform: bme280_i2c
     temperature:
       name: "${upper_devicename} Temperature"
       id: ${devicename}_temperature
@@ -95,6 +96,10 @@ sensor:
 
 
 esp32_ble_tracker:
+  scan_parameters:
+    active: True # Whether to send scan-request packets to devices to gather more info (like devicename)
+    interval: 211ms # suggested 211ms # default 320ms
+    window:   120ms # suggested 120ms # default 30ms
 
 bluetooth_proxy:
   active: true
