--- a/ESP32_sina_bed.yaml
+++ b/ESP32_sina_bed.yaml
@@ -53,7 +53,8 @@ logger:
   level: $logger_level
 
 ota:
-  password: !secret ota_psw
+  - platform: esphome
+    password: !secret ota_psw
 
 binary_sensor:
   - <<: !include common/connectStatusSensor.yaml
@@ -97,7 +98,7 @@ button:
   # - <<: !include common/shutdownSwitch.yaml
 
 sensor:
-  - platform: bme280
+  - platform: bme280_i2c
     temperature:
       name: "${upper_devicename} Temperature"
       id: ${devicename}_temperature
@@ -187,6 +188,10 @@ sensor:
               state: OFF
 
 esp32_ble_tracker:
+  scan_parameters:
+    active: True # Whether to send scan-request packets to devices to gather more info (like devicename)
+    interval: 211ms # suggested 211ms # default 320ms
+    window:   120ms # suggested 120ms # default 30ms
 
 bluetooth_proxy:
   active: true
@@ -201,7 +206,8 @@ light:
     type: GRB
     name: "${upper_devicename} underglow"
     id: ${devicename}_underglow
-    default_transition_length: 1s
+    gamma_correct: 1.0  # to minimise the flickering when turning off
+    default_transition_length: 0s
     method:
       type: esp32_rmt
       channel: 0
